Enhancement for listing altLabels and hiddenLabels for a REST API method
